plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = project.mod_version
group = mod_group

base {
    archivesName = "${mod_id}-${minecraft_version}-fabric"
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    withSourcesJar()
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

processResources {
    exclude '.cache/'

    def replaceProperties = [
        version               : project.version,
        mod_id                : mod_id,
        mod_name              : mod_name,
        mod_license           : mod_license,
        mod_url               : mod_url,
        mod_update            : mod_update,
        mod_tracker           : mod_tracker,
        mod_credits           : mod_credits,
        mod_authors           : mod_authors,
        mod_description       : mod_description,
        minecraft_version     : minecraft_version,
        minecraft_version_range: minecraft_version_range,
        loader_version        : loader_version
    ]

    inputs.properties replaceProperties
    filesMatching('fabric.mod.json') {
        expand replaceProperties
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    mavenCentral()
    maven { url = "https://maven.fabricmc.net" }
    maven { url = "https://maven.blamejared.com" }
    maven { url = "https://cursemaven.com" }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    compileOnly "com.google.code.findbugs:jsr305:3.0.2"

    compileOnly "mezz.jei:jei-${project.minecraft_version}-common-api:${project.jei_version}"
    compileOnly "mezz.jei:jei-${project.minecraft_version}-fabric-api:${project.jei_version}"

    compileOnly "curse.maven:jade-324717:${project.jade_version}"

}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs << '-Xmaxerrs' << '400'
}

compileJava {
    options.incremental = false
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = project.base.archivesName.get()
            from components.java
        }
    }
    repositories {
        maven {
            name = 'GitHubPackages'
            url = 'https://maven.pkg.github.com/The-Aether-Team/The-Aether-fabric'
            credentials {
                username = System.getenv('GITHUB_ACTOR')
                password = System.getenv('GITHUB_TOKEN')
            }
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
